[workspace]
resolver = "2"
members = [
    "crates/gwt-core",
    "crates/gwt-tui",
    "crates/gwt-cli",
]

[workspace.package]
version = "0.3.3"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/tomookikuchi/gwt"

[workspace.dependencies]
anyhow = "1"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
which = "6"

gwt-core = { path = "crates/gwt-core" }
gwt-tui  = { path = "crates/gwt-tui" }

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1
